# fx_trader

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  fx-trader-policy.hcl  nn b.txt  pyproject.toml  redis-entrypoint.sh  tree.txt
.github/workflows/: ci.yml  deploy.yml  retrain.yml
backtest/: __init__.py  runner.py
backtest/strategies/: __init__.py  bollinger_bands_strategy.py  ema_crossover_strategy.py  rsi_strategy.py
config/: __init__.py  settings.py  trading_params.py
data_ingest/: __init__.py  fred_client.py  news_client.py  oanda_client.py
docs/: api.md  configuration.md
docs/api/: rest_api.md
docs/development/: strategy_development.md
docs/operations/: monitoring.md
docs/setup/: development.md  production.md
docs/specification/: specification.md
docs/testing/: strategy.md
execution/: __init__.py  abstract_broker_client.py  mt5_broker_client.py  oanda_broker_client.py  risk_manager.py
feature_store/: __init__.py  data_sources.py  entities.py  feature_definitions.py  feature_store.yaml  online_store.yaml  registry.db
feature_store/feature_views/: macro_features.py  news_features.py  price_features.py
fx_trader/: __init__.py  config.py
fx_trader/app/: main.py
fx_trader/app/api/: __init__.py
fx_trader/app/api/v1/: __init__.py  api.py
fx_trader/app/api/v1/endpoints/: __init__.py  accounts.py  backtesting.py  health.py  market_data.py  orders.py  positions.py  trading.py
fx_trader/db/: base.py
fx_trader/db/migrations/: __init__.py  env.py
fx_trader/db/migrations/versions/: 246a1bafa3c5_initial_migration.py  7f2f6a4320d0_initial_migration.py
great_expectations/: __init__.py  great_expectations.yml
great_expectations/checkpoints/: price_data_checkpoint.yml
great_expectations/expectations/: macro_data_suite.json  news_data_suite.json  price_data_suite.json
mlops/: __init__.py  retrain.py  train.py  vault_client.py
models/: __init__.py  forecast.py  signals.py
monitoring/: __init__.py  exporters.py  metrics.py  prometheus.yml
monitoring/alert_rules/: fx_trader_alerts.yml
monitoring/alertmanager/: alerts.yml  config.yml
monitoring/grafana_dashboards/: fx_trader_dashboard.json
monitoring/grafana_provisioning/dashboards/: dashboards.yml  fx_trader_dashboard.json  grafana_dashboard.json
monitoring/grafana_provisioning/datasources/: prometheus_ds.yml
orchestrator/: __init__.py  airflow_dag.py  prefect_flow.py
prometheus/: prometheus.yml
prometheus/rules/: trading_alerts.yml
quality_checks/: __init__.py  validate.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_backtest.py  test_config.py  test_data_ingest.py  test_execution.py  test_oanda_client.py  test_risk_manager.py  test_utils.py
utils/: __init__.py  http_client.py  logging.py
